
*********************************************************************************************
*                                  CHANGE LOG 1.0.1 - > 1.1.0                               *
*********************************************************************************************

 * (03/05/2012) kivan
	# 272
	
	FIXED: LoginDialog is now not always on top (is modal now) and it is resizable now (text field/area elements too).

 * (03/02/2012) kivan
	# 271
	
	CHANGED: EDEDBProperties is now ConfigPropertiesLoader which loads properties file from config directory by file name. Used because JUIGLE 
			PropertiesLoader was throwing NullPointers when "config.properties" was tried to load (my bad?)
	CHANGED: build.xml - added copying non/java files into bin directory when compile (hibernate config files)
	FIXED: app is now launchable using build.xml

 * (02/29/2012) kivan
	# 270
	
	INTERNAL: Dao classes are now singletons. Instead of using DaoFactory is sufficient to use DaoClassName.getInstance();
	Bug with not freezing gui while downloading files does not appear anymore. Will fix, when I'll run into it again.

 * (02/28/2012) kivan
	# 269
	
	FIXED: DataSyncer - upload of experiments and datafiles now works!
	CHANGED: minor changes in order to update ededb table properly

 * (02/26/2012) kivan
	#268
	
	CHANGED: EDEDClient update
	CHANGED: minor changes in db mapping and sql due to changes of data storage logic in EEG Base
	
	Bugs still persists.

 * (02/26/2012) kivan
	#267
	
	CHANGED: mappings, updated EDEDClient and DataSyncer logic. Not functional yet due to error on the side of EEG base.
	
	Previous bugs are still present, will be fixed in upcomming commits.

 * (02/23/2012) kivan
	#266
	
	This is other :backup: commit.
	FIXED: deadlock during downloading files
	INTERNAL: because Hibernate over JDBC creates for each session its thread, it is neccessary explicitely create own session and close it after work is done!